# IOTProject

./: .cproject  .gitignore  .project  CMakeLists.txt  Diagrama sem nome.drawio  IOT.ioc  README.md  build_test.sh
.github/workflows/: cmake-multi-platform.yml
Core/Src/: main.cpp
Core/Src/HAL/: CMakeLists.txt
Core/Src/HAL/Boards/: BoardInterface.cpp  BoardInterface.h  STM32Board.cpp  STM32Board.h
Core/Src/HAL/DebugController/: DebugController.cpp  DebugController.h  DebugInterface.cpp  DebugInterface.h
Core/Src/HAL/Devices/Communication/: STM32UartCommunication.cpp  STM32UartCommunication.h
Core/Src/HAL/Devices/Communication/Interfaces/: UartCommunicationInterface.h
Core/Src/HAL/Devices/IOT/Interfaces/: ModemInterface.cpp  ModemInterface.h
Core/Src/HAL/Devices/IOT/Modem/: SIM7020E.cpp  SIM7020E.h  SIM800L.cpp  SIM800L.h
Core/Src/HAL/RTOSWrappers/: QueueWrapper.cpp  QueueWrapper.h  RtosUtilsWrapper.h  SemaphoreWrapper.cpp  SemaphoreWrapper.h  TaskWrapper.cpp  TaskWrapper.h  TaskWrapperManager.cpp  TaskWrapperManager.h
Core/Src/HAL/Storage/: SDInterface.h  STM32SD.cpp  STM32SD.h  StorageInterface.h
Test/: CMakeLists.txt
Test/unit/Core/Src/HAL/DebugController/: DebugControllerTests.cpp
Test/unit/Core/Src/HAL/DebugController/Mocks/: MockDebugController.h  MockDebugInterface.h
Test/unit/Core/Src/HAL/Devices/Communication/Interfaces/Mocks/: MockUartCommunicationInterface.h
Test/unit/Core/Src/HAL/Devices/IOT/Interfaces/: ModemInterfaceTests.cpp
Test/unit/Core/Src/HAL/Devices/IOT/Modem/: SIM800LTests.cpp
Test/unit/Core/Src/HAL/RTOSWrappers/Mocks/: MockQueueManager.h
